<resources>
    <string name="app_name">淘淘小二</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="exit">退出登录</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="my_order">我的订单</string>
    <string name="order_history">接单记录</string>
    <string name="message_center">消息中心</string>
    <string name="my_account">我的账户</string>
    <string name="setting">设置</string>
    <string name="userinfo">个人信息</string>
    <string name="zhuanzhang">转账</string>
    <string name="shoukuan">收款</string>
    <string name="chongzhi">充值</string>
    <string name="message_remind">消息提醒</string>
    <string name="third_bind">第三方绑定</string>
    <string name="modify_password">修改密码</string>
    <string name="clear_cache">清除缓存</string>
    <string name="phone_safe">手机安全防护</string>
    <string name="suggestion">意见反馈</string>
    <string name="update_version">检查更新</string>
    <string name="about_us">关于我们</string>
    <string name="user_logo">头像</string>
    <string name="user_nickname">昵称</string>
    <string name="user_address">地址</string>
    <string name="user_sex">性别</string>
    <string name="user_rank">身份</string>
    <string name="user_phone">手机号</string>
    <string name="no_message_str">没有新消息</string>
    <string name="im_here">我在这里</string>
    <string name="please_set_phone">请输入手机号</string>
    <string name="get_code">获取验证码</string>
    <string name="code">验证码</string>
    <string name="fast_reg">快速注册</string>
    <string name="argee_xieyi">同意淘淘小二用户注册协议</string>
    <string name="next">下一步</string>
    <string name="yes">确定</string>
    <string name="no">取消</string>
    <string name="reg_phone_alert_title">我们将发送短信至：</string>
    <string name="done">完成</string>
    <string name="set_password_hint">请设置为6-20位字符</string>
    <string name="please_set_password">设置登录密码</string>
    <string name="password">密码</string>
    <string name="find_password">找回密码</string>
    <string name="login">登录</string>
    <string name="new_address">新增地址</string>
    <string name="logining">正在登录</string>
    <string name="reging">正在注册</string>
    <string name="unknow">未知错误</string>
    <string name="unlogin">请重新登录</string>
    <string name="please_set_nickname">请输入昵称</string>
    <string name="too_long_nickname">昵称必须小于12个字</string>
    <string name="saving">正在保存</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="please_set_address">请输入地址</string>
    <string name="camera">相册</string>
    <string name="album">拍照</string>
    <string name="please_set_right_phone">请输入正确手机号</string>
    <string name="phone">电话</string>
    <string name="username">用户名</string>
    <string name="empty">无</string>
    <string name="getting_lat_lng">正在获取坐标信息</string>
    <string name="getting_route">正在查询路径</string>
    <string name="status1">接单</string>
    <string name="status2">等待确认</string>
    <string name="status3">取餐</string>
    <string name="status4">送餐</string>
    <string name="status5">订单完成</string>
    <string name="status6">待评价</string>
    <string name="status7">已评价</string>
    <string name="please_wait">请等待</string>
    <string name="search_fail">查询失败</string>
    <string name="reset_nickname">更改昵称</string>
    <string name="order_id_title">订单编号：%s</string>
    <string name="order_status">订单状态</string>
</resources>
