<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:background="@color/activity_bg"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/remind_text"
        android:layout_width="match_parent"
        android:textColor="#9a9a9a"
        android:textSize="15sp"
        android:text="@string/please_set_password"
        android:layout_height="45dp"
        android:gravity="center_vertical" />


    <EditText
        android:layout_width="match_parent"
        android:textSize="15sp"
        android:id="@+id/password"
        android:background="@drawable/normal_edit_text_bg"
        android:textColor="#838383"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:gravity="center_vertical"
        android:inputType="textPassword"
        android:hint="@string/set_password_hint"
        android:layout_marginTop="10dp"
        android:layout_height="45dp" />

    <Button
        android:layout_width="match_parent"
        android:text="@string/done"
        android:id="@+id/done"
        android:enabled="false"
        android:layout_marginTop="30dp"
        android:textColor="@drawable/reg_next_btn_text_select"
        android:textSize="18sp"
        android:background="@drawable/reg_next_btn_select"
        android:layout_height="44dp" />
</LinearLayout>