<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/activity_bg"
              android:orientation="vertical"
              android:padding="16dp">

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/normal_edit_text_bg"
        android:gravity="center_vertical"
        android:hint="@string/username"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:maxLength="30"
        android:textColor="#838383"
        android:textSize="15sp"/>


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/normal_edit_text_bg"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="#838383"
        android:textSize="15sp"/>


    <Button
        android:id="@+id/reg_next"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/reg_next_btn_select"
        android:enabled="false"
        android:text="@string/next"
        android:textColor="@drawable/reg_next_btn_text_select"
        android:textSize="18sp"/>
</LinearLayout>